--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="{{ asset('assets/css/oflix.css') }}">
     <!-- favicon -->
     <link rel="shortcut icon" href="{{ asset('assets/favicon.png') }}" type="image/x-icon">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Bienvenue sur Oflix!{% endblock %}</title>
     </head>
 
     <body>
     <!-- Nav -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a href="./" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
+            <a href="{{ path('main_home') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
                 <img src="{{ asset('assets/favicon.png') }}" height="24" alt="Logo O'flix">
                 <span class="header-logo__title">O'flix</span>
             </a>
@@ -35,13 +35,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Accueil</a>
+                        <a class="nav-link active" href="{{ path('main_home') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./list.html"><i class="bi bi-film"></i> Films, séries TV</a>
+                        <a class="nav-link" href="{{ path('main_list') }}"><i class="bi bi-film"></i> Films, séries TV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./favorites.html"><i class="bi bi-bookmark"></i> Ma liste</a>
+                        <a class="nav-link" href="{{ path('main_favorites') }}"><i class="bi bi-bookmark"></i> Ma liste</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
