add entity season

--- a/templates/movie/list.html.twig
+++ b/templates/movie/list.html.twig
@@ -66,7 +66,7 @@ oflix - list
                             <i class="bi bi-star-half"></i>
                             <span class="ps-1">{{ movie.rating }}</span>
                         </div>
-                        <a href="{{ path('movies', {'id' : movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="{{ path('movie', {'id' : movie.id}) }}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
