--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -65,7 +65,7 @@ oflix - titre
                                 {% endfor %}
                             </dd>
                             {#version en utilisant les casting recupéré a la main  et le lazi avec le tri #}
-                            <dt class="col-sm-12">Avec(le controller movieController)</dt>
+                            {#<dt class="col-sm-12">Avec(le controller movieController)</dt>
                             <dd class="col-sm-12">
                                 {% for casting in castingFilterByMovie %}
                                     {{ casting.actor.firstname }} {{ casting.actor.lastname }} ({{ casting.role }})<br>
@@ -76,14 +76,14 @@ oflix - titre
                             <dt class="col-sm-12">Pays</dt>
                             <dd class="col-sm-12">USA</dd>
                             <dt class="col-sm-12">Année</dt>
-                            <dd class="col-sm-12">{{ movie.releaseDate|date("d/m/Y") }}</dd>
+                            <dd class="col-sm-12">{{ movie.releaseDate|date("d/m/Y") }}</dd>#}
                             {#celle ci ne fonctionne pas: <dd class="col-sm-12">{{ movie.releaseDate }}</dd>#}
                         </dl>
                     </div>
                 </div>
 
             </div>
-
+            <p><a class="btn btn-sm btn-warning" href="{{ path('movie_review_add', {id: movie.id}) }}">Ajouter une critique</a></p>
         </div>
 
     </div>
