--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Profil</a></li>
-                            <li><a class="dropdown-item" href="#">Backoffice</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_back_movie_index') }}">Backoffice</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
