--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,11 +48,12 @@
                         <a class="nav-link" href="{{ path('main_favorites') }}"><i class="bi bi-bookmark"></i> Ma liste</a>
                     </li>
                 </ul>
+                {% if app.user %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown">
-                            <span>Charles</span>
+                            <span>{{ app.user.email }}</span>
                             <i class="bi bi-person-square"></i>
                         </a>
                         <ul class="dropdown-menu">
@@ -61,12 +62,15 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
                         </ul>
                     </li>
                 </ul>
+                {% else  %}
+                    <a href="{{ path('app_login') }}" type="button" class="btn btn-danger me-2">Connexion</a>
+                {% endif %}
 
-                <button type="button" class="btn btn-danger me-2">Connexion</button>
+                
 
                 <form class="d-flex" action="list.html">
                     <input class="form-control form-control-sm me-2" name="search" type="search" placeholder="Rechercher...">
